# Metroidvania

./: CMakeLists.txt  README.md
src/: base.cpp  base.h  dynamics.cpp  dynamics.h  game.cpp  game.h  gameutil.cpp  gameutil.h  geometry.cpp  geometry.h  intersect.cpp  intersect.h  main.cpp
test/: CMakeLists.txt  baseTest.cpp  dynamicsTest.cpp  geometryTest.cpp
